# mpc

./: CMakeLists.txt  ControlData.h  ControllerOutput.h  CostAndConstraintsCalculator.cpp  CostAndConstraintsCalculator.h  MPCController.cpp  MPCController.h  Polynomial.cpp  Polynomial.h  Setup.h  WebSocketMessageHandler.cpp  WebSocketMessageHandler.h  Writeup.md  main.cpp
